Fix string formatting for Java 11