@@ -82,6 +82,6 @@ public abstract class BaseRosterItemModel {
 
     @Override
     public String toString() {
-        return "%s %s".formatted(_roadName, _roadNumber);
+        return String.format("%s %s", _roadName, _roadNumber);
     }
 }
